--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://integ.dynv6.net:3306/pping?createDatabaseIfNotExist=true
-spring.datasource.username=pping
-spring.datasource.password=BfYAdlnhDJ2fnN8pcfYm
+#spring.datasource.url=jdbc:mariadb://integ.dynv6.net:3306/pping?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/backendTestDB?createDatabaseIfNotExist=true
+
+#spring.datasource.username=pping
+spring.datasource.username=root
+
+#spring.datasource.password=BfYAdlnhDJ2fnN8pcfYm
+spring.datasource.password=root
+
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
