--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://integ.dynv6.net:3306/pping?createDatabaseIfNotExist=true
-spring.datasource.username=pping
-spring.datasource.password=BfYAdlnhDJ2fnN8pcfYm
+#spring.datasource.url=jdbc:mariadb://integ.dynv6.net:3306/pping?createDatabaseIfNotExist=true
+#spring.datasource.username=pping
+#spring.datasource.password=BfYAdlnhDJ2fnN8pcfYm
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/pping?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
