PostGrec Database connected

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,21 @@
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mariadb://integ.dynv6.net:3306/pping?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mariadb://localhost:3306/backendTestDB?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mariadb://localhost:3306/backendTestDB?createDatabaseIfNotExist=true
 
 #spring.datasource.username=pping
-spring.datasource.username=root
+#spring.datasource.username=root
 
 #spring.datasource.password=BfYAdlnhDJ2fnN8pcfYm
-spring.datasource.password=root
+#spring.datasource.password=root
 
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.jpa.show-sql=true
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://63.250.60.139:5432/pping
+spring.datasource.username=pping
+spring.datasource.password=dBqbbXZwRQSbRXRbim4j
+spring.jpa.database=POSTGRESQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
