PostGrec Database connected

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://integ.dynv6.net:3306/pping?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://63.250.60.139:5432/pping
 spring.datasource.username=pping
-spring.datasource.password=BfYAdlnhDJ2fnN8pcfYm
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.password=dBqbbXZwRQSbRXRbim4j
+spring.jpa.database=POSTGRESQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
