change postgres to lokal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://63.250.60.139:5432/pping
+# spring.datasource.username=pping
+# spring.datasource.password=dBqbbXZwRQSbRXRbim4j
+# spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.database=POSTGRESQL
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://63.250.60.139:5432/pping
-spring.datasource.username=pping
-spring.datasource.password=dBqbbXZwRQSbRXRbim4j
+spring.datasource.url=jdbc:postgresql://localhost:7002/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Boppels-1023
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=POSTGRESQL
