--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:7002/postgres
-spring.datasource.username=postgres
-spring.datasource.password=Boppels-1023
+spring.datasource.username=belu23
+spring.datasource.password=LcquH9{tR0o,Q=>s]Ki6a(Mb
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=POSTGRESQL
